# aitalents-investoid

./: .gitignore  README.md
notebooks/: Data labeling.ipynb  Data prep - news headlines.ipynb  Data prep - news with orgs.ipynb  Heroku - db Migration.ipynb  Nasdaq. vs nyse.ipynb  good_thread_performance.json  preprocessing - name lookup dict.ipynb
scraping/: pyproject.toml
scraping/scraping/: alianz_pr.py  get_sample_companies.py
scraping/tests/: test_scraping.py
training/: Training - BERT.ipynb  Training - Julius - Full Text.ipynb  Training - Julius.ipynb  Training - samuel.ipynb  bert.py
